--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
     "next": "15.5.6",
+    "nodemailer": "^7.0.11",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
